P6.44: make cancellation responses atomic
